--- a/style.css
+++ b/style.css
@@ -11,12 +11,12 @@
 body, h1, h2, p, ul, li {
     margin:0;
     padding:0;
-  }
+    }
 
- .imglogo{
+.imglogo{
     display:flex;
     justify-content: left;
-    text-align: left;
+    text-align: center;
     height: 100px;  
 }
 
@@ -25,36 +25,44 @@ body, h1, h2, p, ul, li {
       width: 100%;
       height: 400px;
     }
-  }
+}
 
 nav{ 
     list-style-type: none;
-    width: 100%;
-    height: 100px;
-    background-color: var(--main-color) ;
+    /**width: 100%;
+    /**height: 100px;*/
+    background-color: var(--main-color);
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     justify-content: space-between;
-    margin:0;
+    padding : 10px;
+    color : white; 
+    /**margin:0; */
+}   
     
     
-    
-   }
-   ul{
-       list-style-type: none;
-       display: flex;
-       }
+   
+ul{
+    list-style-type: none;
+    display: flex;
+    gap : 10px;
+} 
 
-    a:hover {text-decoration: underline;}
+a {
+    color : #DDD;
+    text-decoration: none;
+    font-size: 20px;
+}
+
+a:hover {
+    text-decoration: underline;
+}
 
 
  
  h1{ 
      text-align: center;
-     color: #a77252;
-     
-     
-     
+     color: #a77252;       
  }
  
  section{
