--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 :root {
     --main-color:#1a2b44;
+    --secondary-color:#a77252;
+    --darky: black;
+    --lighty: #fff;
  }
 
  * {
@@ -35,8 +38,8 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding : 10px;
-    color : white; 
+    padding : 10px;  
+    color :lighty; 
     /**margin:0; */
 }   
     
@@ -49,7 +52,7 @@ ul{
 } 
 
 a {
-    color : #DDD;
+    color :var(--lighty);
     text-decoration: none;
     font-size: 20px;
 }
@@ -79,7 +82,7 @@ a:hover {
      color: var(--main-color);
  }
  body{
-     background-color:white;
+     background-color:var(--lighty);
      padding : 0;
  }
 
