--- a/style.css
+++ b/style.css
@@ -1,95 +1,28 @@
-:root {
-    --main-color:#1a2b44;
- }
+li{
 
- * {
-    box-sizing: border-box;
-    padding:0;
+   list-style: none;
+   text-align: right;
+   margin-right: 20px;
+   margin-top: -20px;
 
 }
-
-body, h1, h2, p, ul, li {
-    margin:0;
-    padding:0;
-    }
-
-.imglogo{
-    display:flex;
-    justify-content: left;
-    text-align: center;
-    height: 100px;  
-}
-
-@media only screen and (max-width: 480px) {
-    .imgfoodtruck {
-      width: 100%;
-      height: 400px;
-    }
-}
-
-nav{ 
-    list-style-type: none;
-    /**width: 100%;
-    /**height: 100px;*/
-    background-color: var(--main-color);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding : 10px;
-    color : white; 
-    /**margin:0; */
-}   
-    
-    
+.logo{
+   margin: left 20px; 
+   color: #a77252;
    
-ul{
-    list-style-type: none;
-    display: flex;
-    gap : 10px;
-} 
 
-a {
-    color : #DDD;
-    text-decoration: none;
-    font-size: 20px;
-}
-
-a:hover {
-    text-decoration: underline;
 }
 
 
- 
- h1{ 
-     text-align: center;
-     color: #a77252;       
- }
- 
- section{
-     color:var(--main-color) ;
- }
+h1{ 
+    text-align: center;
+    color: #1a2b44;
+}
 
- p{
-     color:var(--main-color);
- }
- 
- h3{
-     display:flex;
-     justify-content: center;
-     color: var(--main-color);
- }
- body{
-     background-color:white;
-     padding : 0;
- }
+section{
+    color:#1a2b44 ;
+}
 
- .facebook , .insta{
-     
-    display: flex;
-    height: 60px;
-    width: 60px;
- }
-
- 
-
- 
+body{
+    background-color:seashell;
+}
