--- a/style.css
+++ b/style.css
@@ -81,7 +81,26 @@ a:hover {
  body{
      background-color:white;
      padding : 0;
+     text-align : center;
  }
+
+/**Tableau indiquant le jour ainsi que l'adresse du food truck */
+
+
+table {
+    border-collapse: collapse; /* Les bordures du tableau seront collées */
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    caption-side: top;
+}
+
+td, th {
+    border: 1px solid black;
+    width : 100px;
+}
+
 
  .facebook , .insta{
      
