--- a/style.css
+++ b/style.css
@@ -23,13 +23,6 @@ body, h1, h2, p, ul, li {
     height: 100px;  
 }
 
-@media only screen and (max-width: 480px) {
-    .imgfoodtruck {
-      width: 100%;
-      height: 400px;
-    }
-}
-
 nav{ 
     list-style-type: none;
     /**width: 100%;
@@ -39,7 +32,7 @@ nav{
     align-items: center;
     justify-content: space-between;
     padding : 10px;  
-    color :lighty; 
+    color :var(--lighty); 
     /**margin:0; */
 }   
     
@@ -86,6 +79,16 @@ a:hover {
      padding : 0;
  }
 
+ .contactform{
+    border : inset 1px --darky;
+    background-color :var(--main-color);
+    color :var(--lighty);
+    display: flex;
+    width: 40%;
+    text-align : right;
+    padding-right : 5px;
+ }
+
  .facebook , .insta{
      
     display: flex;
@@ -94,5 +97,12 @@ a:hover {
  }
 
  
+@media only screen and (max-width: 480px) {
+    .imgfoodtruck {
+      width: 100%;
+      height: 400px;
+    }
+}
+
 
  
