--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@
     font-size: 110px;
     text-align: center;
  }
-
-
  * {
     box-sizing: border-box;
     padding:0;
@@ -37,8 +35,8 @@ body, h2, p, ul, li {
 
 nav{ 
     list-style-type: none;
-    /**width: 100%;
-    /**height: 100px;*/
+   /* width: 100%;
+     height: 100px;*/
     background-color: var(--main-color);
     display: flex;
     align-items: center;
