--- a/style.css
+++ b/style.css
@@ -1,33 +1,20 @@
-
 :root {
     --main-color:#1a2b44;
     --secondary-color:#a77252;
     --darky: black;
     --lighty: #fff;
  }
+
  * {
     box-sizing: border-box;
     padding:0;
     margin: 0;
    
  }
- header {
-     display: flex;
-     width: 100%;
-     height: 100px;
- }
 
+ /*CSS par défault*/
 
- .titre{
-     display: flex;
-     color: #fde035;
-    font-size: clamp(20px, 12vw, 200px);
-    text-align: center;
-    
- }
-
-
-nav{ 
+ nav{ 
     position: fixed;
     list-style-type: none;
     width: 100%;
@@ -35,12 +22,17 @@ nav{
     background-color: var(--main-color);
     display: flex;
     align-items: center;
-
-
     justify-content: space-between; 
     color :lighty; 
-  
 }   
+
+ .titre{
+     display: flex;
+     color: #fde035;
+    font-size: clamp(20px, 6vw, 100px);
+    text-align: center;
+    /*changement des tailles font size pour un site first mobile*/
+ }
     
 .imglogo{
     margin: left 20px; 
@@ -50,6 +42,7 @@ nav{
  }
    
 ul{
+    box-sizing: border-box;
     list-style-type: none;
     display: flex;
     gap : 10px;
@@ -68,12 +61,11 @@ a {
 
 }
 
-section{
-    color:#1a2b44 ;
+header {
+    display: flex;
+    width: 100%;
+    height: 100px;
 }
-
-
-
  
  h1{ 
      text-align: center;
@@ -133,7 +125,7 @@ td, th {
 
 
 
- .patisseries{
+.patisseries{
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(12,100px);
@@ -146,11 +138,7 @@ td, th {
 }
 footer{
     display: flex;
-    
-
-
-
-
+    align-items: center;
 }
 
  .facebook , .insta{
@@ -158,4 +146,20 @@ footer{
     display: flex;
     height: 60px;
     width: 60px;
+ }
+
+ .link{
+     display:flex;
+
+
+ }
+
+.Endpage{
+    list-style-type:none;
+	padding:0px;
+	display:table;
+	margin-top: 10px;
+	margin-right: auto;
+	margin-bottom: 10px;
+	margin-left: auto;
  }
