--- a/style.css
+++ b/style.css
@@ -14,14 +14,14 @@
  header {
      display: flex;
      width: 100%;
-     height: 100px;
+     height: 120px;
  }
 
 
  .titre{
      display: flex;
      color: #fde035;
-    font-size: clamp(20px, 12vw, 200px);
+    font-size: clamp(20px, 6vw, 100px);
     text-align: center;
     
  }
@@ -110,11 +110,14 @@ table {
     justify-content: center;
     align-items: center;
     caption-side: top;
+    background-color: DDD;
+
 }
 
 td, th {
-    border: 1px solid black;
+    border: 2px solid black;
     width : clamp(60px, 10vw, 100px);
+    background-color: #DDD;
 }
 
 /**logo des réseaux du truck*/
