--- a/style.css
+++ b/style.css
@@ -5,44 +5,11 @@
     --lighty: #fff;
  }
 
-<<<<<<< HEAD
-     
-header{
-    display: flex;
-    width: 100%;
-    height: 100px;
-}
-
-
-.imglogo{
-    margin: left 20px; 
-    color: #a77252;
-    width: 100px;
-    height: 100px;
- }
-
-
-* {
-    box-sizing: border-box;
-    padding:0;
-    margin: 0;
-   }
-
-
- .titre{
-     display: flex;
-     color: #fde035;
-    font-size:clamp(20px, 12vw, 200px);
-    text-align: center;
-    font-style:italic;
-    
-=======
  * {
     box-sizing: border-box;
     padding:0;
     margin: 0;
    
->>>>>>> e004451dc5cbd7b50073214b162aa703f5c8b4b3
  }
 
  /*CSS par défault*/
@@ -50,26 +17,18 @@ header{
  nav{ 
     position: fixed;
     list-style-type: none;
-   /* width: 100%;
-     height: 100px;*/
+     width: 100%;
+     height: 100px;
     background-color: var(--main-color);
     display: flex;
     align-items: center;
     justify-content: space-between; 
-<<<<<<< HEAD
-    color:lighty;
-  
-}   
-
-   
-nav > ul{
-=======
     color :lighty; 
 }   
 
  .titre{
      display: flex;
-     color: #fde035;
+     color:  #8cb191;
     font-size: clamp(20px, 6vw, 100px);
     text-align: center;
     /*changement des tailles font size pour un site first mobile*/
@@ -84,7 +43,6 @@ nav > ul{
    
 ul{
     box-sizing: border-box;
->>>>>>> e004451dc5cbd7b50073214b162aa703f5c8b4b3
     list-style-type: none;
     display: flex;
     gap : 10px;
@@ -92,7 +50,7 @@ ul{
     }
     
     
-nav li{
+ li{
     font-size:clamp( 3px, 4px, 7px);
 }
 
@@ -105,16 +63,10 @@ a{
 
 }
 
-<<<<<<< HEAD
-section{
-    color:#1a2b44;
-    color:var(--main-color);
-=======
 header {
     display: flex;
     width: 100%;
     height: 100px;
->>>>>>> e004451dc5cbd7b50073214b162aa703f5c8b4b3
 }
  
  h1{ 
@@ -138,9 +90,9 @@ header {
  body{
      padding: 0px;
      margin: 0px;
-     background-color: #8cb191;
+     background-color: #ddd;
      text-align : center;
-     background-color: #8cb191;
+    
  }
 
 
@@ -175,12 +127,8 @@ td, th{
 /**logo des réseaux du truck*/
 
 
-<<<<<<< HEAD
- .patisseries{
-=======
 
 .patisseries{
->>>>>>> e004451dc5cbd7b50073214b162aa703f5c8b4b3
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(12,100px);
@@ -196,11 +144,7 @@ td, th{
 
 footer{
     display: flex;
-<<<<<<< HEAD
-    
-=======
     align-items: center;
->>>>>>> e004451dc5cbd7b50073214b162aa703f5c8b4b3
 }
 
 
