--- a/style.css
+++ b/style.css
@@ -1,10 +1,3 @@
-* {
-    box-sizing: border-box;
-    padding:0;
-    margin: 0;
-}
-
-
 
 :root {
     --main-color:#1a2b44;
@@ -12,50 +5,40 @@
     --darky: black;
     --lighty: #fff;
  }
-
-
+ * {
+    box-sizing: border-box;
+    padding:0;
+    margin: 0;
+   
+ }
  header {
      display: flex;
      width: 100%;
      height: 120px;
-
-
-
-     
-
-
-
-
+ }
 
 
  .titre{
      display: flex;
      color: #fde035;
-
     font-size: clamp(20px, 6vw, 100px);
-
     text-align: center;
-    font-style:italic;
     
-
  }
 
- /*CSS par défault*/
 
- nav{ 
+nav{ 
     position: fixed;
     list-style-type: none;
-     width: 100%;
-     height: 100px;
+    width: 100%;
+    height: 100px;
     background-color: var(--main-color);
     display: flex;
     align-items: center;
     justify-content: space-between; 
-
     color :lighty; 
+    
 }   
-
-
     
 .imglogo{
     margin: left 20px; 
@@ -64,86 +47,65 @@
     height: 100px;
  }
    
-
-   
 ul{
-
     list-style-type: none;
     display: flex;
     gap : 10px;
     flex-direction: column;
-    }
     
     
-
+} 
 li{
-
-    font-size:clamp( 3px, 4px, 7px);
+    font-size: clamp( 3px, 4px, 7px);
 }
 
-
-
-a{
+a {
     color :var(--lighty);
     text-decoration: none;
     font-size: 20px;
 
 }
 
-
-header {
-    display: flex;
-    width: 100%;
-    height: 100px;
-
 section{
-    color:#1a2b44;
-    color:var(--main-color);
-
+    color:#1a2b44 ;
 }
+
+
+
  
  h1{ 
      text-align: center;
      color: #a77252;       
  }
  
-
+ section{
+     color:var(--main-color) ;
+ }
 
  p{
      color:var(--main-color);
  }
  
+ .imgfoodtruck {
+     width : 320px;
+ }
+
  h3{
      display:flex;
      justify-content: center;
      color: var(--main-color);
  }
-
-
  body{
-     padding: 0px;
-     margin: 0px;
-     background-color: #ddd;
+     background-color: #8cb191;
+     padding : 0;
      text-align : center;
-    
+     background-color: #8cb191;
  }
-
-
- .contactform{
-    border : inset 1px --darky;
-    background-color :var(--main-color);
-    color :var(--lighty);
-    display: flex;
-    width: 40%;
-    text-align : right;
-    padding-right : 5px;
- }
-
 
 /**Tableau indiquant le jour ainsi que l'adresse du food truck */
 
 
-table{
+table {
     border-collapse: collapse; /* Les bordures du tableau seront collées */
     display:flex;
     flex-direction: column;
@@ -154,56 +116,40 @@ table{
 
 }
 
-
 td, th {
     border: 2px solid black;
-
     width : clamp(60px, 10vw, 100px);
     background-color: #DDD;
 }
 
 /**logo des réseaux du truck*/
 
-
+p {
+    text
+}
 
  .patisseries{
-
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(12,100px);
     gap: 10px;
  }
-
-
 .patisserie{
     height: 100px;
     width: 100px;
+    
 }
-
-
 footer{
     display: flex;
+    
 
-    align-items: center;
+
+
 
 }
-
-
-.facebook , .insta{
+ .facebook , .insta{
      
     display: flex;
     height: 60px;
     width: 60px;
- }
-
-
-
-.Endpage{
-    list-style-type:none;
-	padding:0px;
-	display:table;
-	margin-top: 10px;
-	margin-right: auto;
-	margin-bottom: 10px;
-	margin-left: auto;
  }
