--- a/style.css
+++ b/style.css
@@ -27,8 +27,6 @@
  }
 
 
- 
-
 nav{ 
     position: fixed;
     list-style-type: none;
@@ -57,6 +55,7 @@ ul{
     
     
 } 
+
 li{
     font-size: clamp( 3px, 4px, 7px);
 }
@@ -72,8 +71,6 @@ section{
     color:#1a2b44 ;
 }
 
-
-
  
  h1{ 
      text-align: center;
@@ -88,6 +85,29 @@ section{
      color:var(--main-color);
  }
  
+ .imgfoodtruck {
+     width : 400px;
+ }
+
+h4 {
+    color : #a77252;
+}
+
+ #presentationText {
+    display:-ms-inline-grid;
+    height: auto;
+    width:auto;
+    border: 2px solid black;
+    margin : 5px;
+    border-radius: 10px;
+    background-color: #DDD;
+    box-shadow: 1px 1px 1px black inset;
+ }
+
+ .marcPicture {
+     width : 300px;
+ }
+
  h3{
      display:flex;
      justify-content: center;
@@ -123,13 +143,13 @@ td, th {
 /**logo des réseaux du truck*/
 
 
-
  .patisseries{
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(12,100px);
     gap: 10px;
  }
+
 .patisserie{
     height: 100px;
     width: 100px;
@@ -137,12 +157,8 @@ td, th {
 }
 footer{
     display: flex;
-    
-
-
-
-
 }
+
  .facebook , .insta{
      
     display: flex;
