--- a/style.css
+++ b/style.css
@@ -22,11 +22,9 @@
 
  .titre{
      display: flex;
-     color: yellow;
+     color: var(--secondary-color);
     font-size: clamp(2px, 6vw, 100px);
     text-align: center;
-    border: 4px solid var(--lighty);
-    border-style: ridge;
     
  }
 
@@ -77,7 +75,7 @@ li{
 }
 
 .menusName {
-    color : #fde035;
+    color : var(--secondary-color);
 
 }
 
@@ -98,7 +96,7 @@ section{
  
  h1{ 
      text-align: center;
-     color: #fde035; 
+     color: var(--secondary-color); 
      background-color: var(--main-color);  
      border-radius: 50px; 
      font-size:medium;   
@@ -141,7 +139,7 @@ h4 {
  body{
      padding : 0;
      text-align : center;
-     background-color: var(--secondary-color);
+     background-color: #8cb191;
  }
 
 /**Tableau indiquant le jour ainsi que l'adresse du food truck */
@@ -182,7 +180,6 @@ td, th {
     width: 180px;
     gap:10px;
     margin-bottom:10px;
-    border:3px solid red right ;
 
 }
 .def{
@@ -191,7 +188,7 @@ td, th {
     width:auto;
     border: 1px solid black;
     padding: 25px;
-    background-color: var(--secondary-color);
+    background-color: #8cb191;
 }
 
 footer{
@@ -244,6 +241,7 @@ footer{
 
         height: auto;
         border: 3px solid --darky;
+        background-color: #8cb191;
     }
     .patisserie{
         height: 200px;
