--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
      width: 100%;
      height: 100px;
      
+     
  }
 
 
@@ -39,6 +40,7 @@ nav{
     align-items: center;
     justify-content: space-between; 
     color :lighty; 
+    border-bottom:1px solid #a77252;
     
 }   
     
@@ -90,10 +92,14 @@ section{
     color:#1a2b44 ;
 }
 
-.imgfoodtruck{
-    width:100%;
+
+
+.imgfoodtruck {
+    width : clamp(400px, 500px, 700px);
 }
- 
+
+
+
  h1{ 
      text-align: center;
      color: var(--secondary-color); 
@@ -111,10 +117,9 @@ section{
  p{
      color:var(--main-color);
  }
- 
- .imgfoodtruck {
-     width : 400px;
- }
+
+
+
 
 h4 {
     color : var(--darky);
@@ -193,19 +198,61 @@ td, th {
 
 footer{
     display: flex-box;
-    border-top:1px solid black ;
+    border-top:1px solid #a77252;
     align-items: center;
-    height: 100px;
+    background-color: #1a2b44;
+}
+
+
+
+.link{
+    background-color: #1a2b44;
 
 }
+
+
+.links{
+    display: grid;
+    grid-template-columns:repeat(4, 25%);
+    grid-template-rows: 20px 20px;}
+
+
+.text-center{
+    color: white;
+}
+
+label {
+    color : white;
+}
+
 
 .facebook , .insta{
      
     display: inline-flex;
     height: 60px;
     width: 60px;
+    
  }
 
+ input[type="text"], input[type="email"]{
+    margin : 5px;
+    width : 400px;
+}
+
+textarea {
+    width : 400px;
+    height: 150px;
+}
+
+input[type="submit"] {
+    width : 50px;
+    background: #283b63;
+    color: white;
+}
+
+.coordonées {
+    color:white;
+}
  
  @media  screen and (min-width: 600px){
     .patisseries{
@@ -215,7 +262,21 @@ footer{
         border-left: 3px solid --darky;
     }
 
+    input[type="text"], input[type="email"]{
+        margin : 5px;
+        width : 600px;
+    }
 
+    textarea {
+        width : 600px;
+        height: 150px;
+    }
+
+    input[type="submit"] {
+        width : 100px;
+        background: #283b63;
+        color: white;
+    }
  
     
 
@@ -276,3 +337,8 @@ footer{
     }
 
  }
+
+ h2{color: var(--secondary-color);
+}
+
+
